--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,7 +2,6 @@ body {
   background-color: #212121;
   color: #e0e0e0;
   font-family: "Source Code Pro", monospace;
-  padding-top: 5%;
-  padding-left: 15%;
-  padding-right: 15%;
+  margin-left: 15%;
+  margin-right: 15%;
 }
