--- a/portfolio/src/styles/Header.css
+++ b/portfolio/src/styles/Header.css
@@ -1,14 +1,19 @@
 .description {
   font-family: "IM Fell English SC", serif;
   margin: 0;
+  padding: 0;
 }
 
-/* .header {
-  background-color: blue;
-} */
+.header {
+  /* background-color: green; */
+  margin: 0;
+  padding: 0;
+  padding-top: 10%;
+}
 
 .name {
   font-family: "IM Fell English SC", serif;
   font-size: 50px;
-  margin-bottom: 0;
+  margin: 0;
+  padding: 0;
 }
