--- a/portfolio/src/styles/Navigation.css
+++ b/portfolio/src/styles/Navigation.css
@@ -6,6 +6,16 @@
 .altFont:hover {
   color: #9e9e9e;
 }
+/* 
+.container {
+  padding-top: 5%;
+  padding-left: 15%;
+  padding-right: 15%;
+} */
+
+.header {
+  font-family: "IM Fell English SC", serif;
+}
 
 .navFont {
   transition: color 0.25s;
@@ -13,10 +23,8 @@
 }
 
 .navBody {
-  /* background-color: blue; */
   list-style-type: none;
   padding: 0;
-  position: relative;
   width: 8rem;
 }
 
@@ -26,6 +34,12 @@
 
 .navBody:hover .navFont {
   color: #a1a1a1;
+}
+
+.navContainer {
+  /* background-color: blue; */
+  overflow: hidden;
+  position: relative;
 }
 
 .navItem {
@@ -41,17 +55,20 @@
 }
 
 .navItem:hover .previewCard {
-  bottom: -80vh;
+  bottom: -90%;
 }
 
 .previewCard {
   background-color: #e0e0e0;
-  bottom: -100vh;
+  bottom: -100%;
+  border-radius: 15px;
+  box-sizing: border-box;
   color: #212121;
   height: 100%;
+  left: 0;
   position: absolute;
   padding: 20%;
-  border-radius: 15px;
-  transition: bottom 0.5s ease-in-out;
-  width: 70vw;
+  transition: bottom 0.25s ease-in-out;
+  width: 100%;
+  z-index: 10;
 }
