--- a/portfolio/src/styles/MouseCircle.css
+++ b/portfolio/src/styles/MouseCircle.css
@@ -1,7 +1,8 @@
 .circle {
+  opacity: 50%;
   width: 40px;
   height: 40px;
-  background-color: #303030;
+  background-color: #111111;
   border-radius: 50%;
   position: fixed;
   pointer-events: none;
