Preview Card is Fully Responsive

--- a/portfolio/src/styles/Navigation.css
+++ b/portfolio/src/styles/Navigation.css
@@ -32,6 +32,11 @@
   position: relative;
 }
 
+.navContainer .previewCard.active,
+.navContainer .navItem .previewCard.active {
+  transform: translateY(calc(var(--card-height) + 8vh));
+}
+
 .navItem {
   margin-top: 5px;
 }
@@ -46,12 +51,12 @@
 
 .navItem:hover .previewCard {
   transform: translateY(0);
-  /* Move into view */
 }
 
 .previewCard {
   background-color: #e0e0e0;
-  border-radius: 15px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
   box-sizing: border-box;
   color: #212121;
   height: 100%;
@@ -59,10 +64,9 @@
   position: absolute;
   padding-left: 5%;
   padding-right: 5%;
-  /* top: 90vh; */
-  transition: transform 0.5s cubic-bezier(0.8, 0, 0.2, 1); /* Adjust as needed */
+  transition: transform 0.5s cubic-bezier(0.8, 0, 0.2, 1);
   transform: translateY(7.5vh);
-  will-change: transform; /* Optimize for smoother animations */
+  will-change: transform;
   width: 100%;
   z-index: 10;
 }
