Moved CSS Properties to Card

--- a/portfolio/src/styles/Navigation.css
+++ b/portfolio/src/styles/Navigation.css
@@ -32,8 +32,8 @@
   position: relative;
 }
 
-.navContainer .previewCard.active,
-.navContainer .navItem .previewCard.active {
+.navContainer .card.active,
+.navContainer .navItem .card.active {
   transform: translateY(calc(var(--card-height) + 8vh));
 }
 
@@ -49,28 +49,6 @@
   color: #e0e0e0;
 }
 
-.navItem:hover .previewCard {
+.navItem:hover .card {
   transform: translateY(0);
-}
-
-.previewCard {
-  background-color: #e0e0e0;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  box-sizing: border-box;
-  color: #212121;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  padding-left: 5%;
-  padding-right: 5%;
-  transition: transform 0.5s cubic-bezier(0.8, 0, 0.2, 1);
-  transform: translateY(7.5vh);
-  will-change: transform;
-  width: 100%;
-  z-index: 10;
-}
-
-.previewTitle {
-  font-size: 26px;
 }
