--- a/portfolio/src/styles/Card.css
+++ b/portfolio/src/styles/Card.css
@@ -4,18 +4,61 @@
   border-top-right-radius: 15px;
   box-sizing: border-box;
   color: #212121;
+  font-family: "Varela Round", sans-serif;
   height: 100%;
   left: 0;
+  -ms-overflow-style: none;
+  overflow: auto;
   position: absolute;
   padding-left: 5%;
   padding-right: 5%;
+  scrollbar-width: none;
   transition: transform 0.5s cubic-bezier(0.8, 0, 0.2, 1);
   transform: translateY(7.5vh);
   will-change: transform;
   width: 100%;
-  z-index: 10;
+  z-index: 5;
+}
+
+.card::-webkit-scrollbar {
+  display: none;
+}
+
+.card img {
+  display: block;
+  margin-bottom: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
 }
 
 .previewTitle {
-  font-size: 26px;
+  background: inherit;
+  font-size: 30px;
+  overflow: hidden;
+  padding-top: 2.5vh;
+  padding-bottom: 2.5vh;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+.previewTitle::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2.5vh; /* Height of the fade effect */
+  background: linear-gradient(
+    to bottom,
+    transparent,
+    #e0e0e0
+  ); /* Gradient from transparent to the card's background color */
+  pointer-events: none; /* Prevents the pseudo-element from capturing mouse events */
+}
+
+.previewContent {
+  line-height: 1.5em;
 }
