--- a/portfolio/src/styles/Experience.css
+++ b/portfolio/src/styles/Experience.css
@@ -1,3 +1,14 @@
 .experienceContainer {
     padding-top: 3vh;
+    padding-bottom: 3vh;
+    line-height: 28px;
+}
+
+.experienceTitle {
+    font-size: 22px;
+}
+
+hr {
+    margin-bottom: 2.5%;
+    margin-top: 2.5%;
 }
