--- a/portfolio/src/styles/Experience.css
+++ b/portfolio/src/styles/Experience.css
@@ -4,16 +4,12 @@
     line-height: 28px;
 }
 
-.experienceTitle {
-    font-size: 22px;
-}
-
-hr {
+.experienceContainer hr {
     margin-bottom: 2.5%;
     margin-top: 2.5%;
 }
 
-ul {
-    padding-left: 20px;
-    text-align: justify;
+.experienceTitle {
+    font-size: 22px;
+    text-align: left;
 }
