--- a/portfolio/src/styles/MouseCircle.css
+++ b/portfolio/src/styles/MouseCircle.css
@@ -9,3 +9,12 @@
   transform: translate(-50%, -50%);
   z-index: 15;
 }
+
+.close {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -65%);
+  font-size: 16px;
+  z-index: 15;
+}
