--- a/portfolio/src/styles/MouseCircle.css
+++ b/portfolio/src/styles/MouseCircle.css
@@ -11,10 +11,13 @@
 }
 
 .close {
+  color: white;
+  opacity: 1;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -65%);
-  font-size: 16px;
-  z-index: 15;
+  font-size: 18px;
+  font-weight: bold;
+  z-index: 20;
 }
