--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,11 @@
 }
 
 .landing-page {
-  background-color: #9e9e9e;
+  background-color: #212121;
+  display: flex;
   position: absolute;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   width: 100vw;
