--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,41 @@
   height: 100vh;
   z-index: 10;
 }
+
+.scroll-text {
+  font-family: "IBM Plex Mono", monospace;
+  position: absolute;
+  bottom: -100%;
+  width: 100%;
+  font-weight: 100px;
+  white-space: nowrap;
+  animation: riseAndExitUp 3s cubic-bezier(0.25, 0.5, 0.25, 1) infinite;
+}
+
+.scroll-text-first {
+  animation-delay: 1s; /* Half of the animation duration */
+}
+
+.scroll-text-second {
+  animation-delay: 2.5s;
+}
+
+.scroll-container {
+  position: relative;
+  overflow: hidden;
+}
+
+@keyframes riseAndExitUp {
+  0%,
+  20% {
+    bottom: -100%;
+  }
+  40%,
+  60% {
+    bottom: 0;
+  }
+  80%,
+  100% {
+    bottom: 100%;
+  }
+}
