--- a/src/styles/MainLandingContent.css
+++ b/src/styles/MainLandingContent.css
@@ -8,7 +8,7 @@
 }
 
 .headshot {
-  width: 100%;
+  width: 50vw;
 }
 
 .landing-content {
@@ -19,7 +19,7 @@
   width: 50vw;
   margin-right: 25vw;
   margin-left: 25vw;
-  height: calc(100vh - 15px - 2vh);
+  height: calc(95vh - 15px - 2vh);
 }
 
 .main-landing-content-container {
