--- a/src/styles/MainLandingContent.css
+++ b/src/styles/MainLandingContent.css
@@ -1,5 +1,5 @@
 .description {
-  width: 100%;
+  width: 500px;
   text-align: justify;
   margin-top: 2.5vh;
 }
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 500px;
 }
 
