--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,6 @@
   height: 100vh;
 }
 
-.main-content {
-  width: 100vw;
-  height: 100vh;
-  z-index: 5;
-}
-
 .main-landing-content {
   width: 100vw;
   height: 100vh;
@@ -24,6 +18,7 @@
   background-color: #212121;
   display: flex;
   position: absolute;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   top: 0;
