--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,20 +1,11 @@
 .navbar-container {
-  font-family: "IBM Plex Mono", monospace;
-  position: sticky;
-  top: 0;
-  width: 100vw;
-  height: 5vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
-}
-
-.nav-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
+  height: 5vh; /* Height */
+  padding-left: 2.5vw; /* Edge Formatting */
+  padding-right: 2.5vw; /* Edge Formatting */
+  background-color: #f5f5f5;
+  display: flex; /* Flexbox */
+  flex-direction: row; /* Align Items Horizontally */
+  justify-content: space-between; /* Item Spacing Evently */
+  align-items: center; /* Vertical Item Centering */
+  z-index: 5;
 }
