--- a/src/styles/ExperiencePreview.css
+++ b/src/styles/ExperiencePreview.css
@@ -1,14 +1,21 @@
 .experience-preview-container {
   width: 50vw;
-  height: auto;
   margin-left: 25vw;
   margin-right: 25vw;
-  height: 50vh;
+}
+
+@media (max-width: 1200px) {
+  .experience-preview-container {
+    width: 80vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
 }
 
 .experience-preview-grid {
   display: flex;
   flex-direction: column;
+  width: 100%;
   gap: 2.5vh;
 }
 
@@ -16,7 +23,6 @@
   background-color: #212121;
   color: #e0e0e0;
   padding: 3%;
-  width: 100%;
   height: 30vh;
   display: flex;
   flex-direction: column;
@@ -40,6 +46,12 @@
 .experience-title {
   font-size: 26px;
   padding-bottom: 1%;
+}
+
+@media (max-width: 600px) {
+  .experience-title {
+    font-size: 20px;
+  }
 }
 
 .experience-timeline {
