--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -4,7 +4,7 @@
 }
 
 .landing-page-container {
-  color: #e0e0e0; /* Text Color */
+  color: #f5f5f5; /* Text Color */
   background-color: #212121; /* Background Color */
   width: 100vw; /* Width */
   height: 100vh; /* Height */
