--- a/src/styles/EducationPreview.css
+++ b/src/styles/EducationPreview.css
@@ -1,6 +1,6 @@
 .education-preview-container {
   width: 50vw;
-  height: 100vh;
+  height: auto;
   margin-left: 25vw;
   margin-right: 25vw;
   line-height: 20px;
