--- a/src/styles/EducationPreview.css
+++ b/src/styles/EducationPreview.css
@@ -6,6 +6,14 @@
   line-height: 20px;
 }
 
+@media (max-width: 1200px) {
+  .education-preview-container {
+    width: 80vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
+}
+
 .education-content-item {
   padding-top: 2.5vh;
   padding-bottom: 2.5vh;
@@ -13,6 +21,7 @@
 
 .education-content-item-title {
   font-size: 26px;
+  line-height: 30px;
   padding-bottom: 1%;
 }
 
