--- a/src/styles/ProjectsPreview.css
+++ b/src/styles/ProjectsPreview.css
@@ -6,6 +6,14 @@
   background-color: #212121;
 }
 
+@media (max-width: 1200px) {
+  .projects-preview-container {
+    width: 80vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
+}
+
 .projects-preview-item {
   width: 95%;
   padding: 2.5%;
