--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -5,7 +5,7 @@
   background-color: #f5f5f5;
   display: flex; /* Flexbox */
   flex-direction: row; /* Align Items Horizontally */
-  justify-content: space-between; /* Item Spacing Evently */
+  justify-content: center; /* Item Spacing Evently */
   align-items: center; /* Vertical Item Centering */
   z-index: 5;
 }
