--- a/src/styles/ProjectsPreview.css
+++ b/src/styles/ProjectsPreview.css
@@ -8,9 +8,19 @@
 
 @media (max-width: 1200px) {
   .projects-preview-container {
-    width: 80vw;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    width: 90vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  .projects-preview-item-title {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .projects-preview-item-title {
+    font-size: 26px;
   }
 }
 
@@ -21,7 +31,6 @@
 
 .projects-preview-item-title {
   color: #f5f5f5;
-  font-size: 26px;
   padding-bottom: 2.5%;
 }
 
