--- a/src/styles/ExperiencePage.css
+++ b/src/styles/ExperiencePage.css
@@ -1,15 +1,15 @@
-.experience-page-container {
+.experience-page-test-container {
+  font-family: "IBM Plex Mono", monospace;
   background-color: #212121;
   color: #f5f5f5;
   width: 100vw;
   height: 95vh;
-  padding-top: 5vh;
-  top: 0;
-  left: 0;
-  position: fixed;
+  overflow: auto;
 }
 
 .back-button {
+  text-decoration: none;
+  color: #f5f5f5;
   display: flex;
   position: relative; /* Hiding Arrow Under Text */
   align-items: center;
@@ -86,4 +86,13 @@
 .experience-page-details-item {
   display: flex;
   justify-content: space-between;
+}
+
+ul {
+  list-style-type: none; /* Removes default bullets */
+  padding-left: 0; /* Optional: Adjusts padding if needed */
+}
+
+ul li::before {
+  content: "— "; /* Em dash as the bullet point */
 }
