--- a/src/styles/ExperiencePreviewCard.css
+++ b/src/styles/ExperiencePreviewCard.css
@@ -1,6 +1,7 @@
 .experience-preview-item {
   background-color: #212121;
   color: #f5f5f5;
+  text-decoration: none;
   padding: 3%;
   height: 30vh;
   display: flex;
@@ -55,6 +56,8 @@
 
 .experience-description {
   opacity: 0;
+  color: #f5f5f5;
+  text-decoration: none;
   transition: opacity 1s ease-out;
   transition-delay: 0.5s;
   line-height: 20px;
@@ -64,6 +67,8 @@
 
 .experience-description.visible {
   opacity: 1;
+  color: #f5f5f5;
+  text-decoration: none;
   visibility: visible;
 }
 
