--- a/src/styles/ExperiencePage.css
+++ b/src/styles/ExperiencePage.css
@@ -1,4 +1,4 @@
-.experience-page-test-container {
+.experience-page-container {
   font-family: "IBM Plex Mono", monospace;
   background-color: #212121;
   color: #f5f5f5;
@@ -43,6 +43,7 @@
 .experience-page-content {
   padding-left: 2.5vw; /* Edge Formatting */
   padding-right: 2.5vw; /* Edge Formatting */
+  padding-bottom: 10vh;
   display: flex;
   gap: 2.5%;
 }
