--- a/src/styles/MainLandingContent.css
+++ b/src/styles/MainLandingContent.css
@@ -23,6 +23,15 @@
   flex-direction: column; /* Align Items Vertically */
   justify-content: center; /* Center Vertically */
   align-items: center; /* Center Horizontally */
+  opacity: 0; /* Invisible on Load */
+  animation: reveal 1.5s ease forwards; /* Animation */
+  animation-delay: 0.25s; /* Animation Delay */
+}
+
+@keyframes reveal {
+  to {
+    opacity: 1;
+  }
 }
 
 .main-content-container .scroll-container {
