--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 html {
   overflow-y: scroll;
-  scrollbar-width: none; /* For Firefox */
+  /* scrollbar-width: none;  For Firefox */
 }
 
 html::-webkit-scrollbar {
-  display: none; /* For Chrome, Safari, and Opera */
+  /* display: none; For Chrome, Safari, and Opera */
 }
 
 body {
