--- a/src/styles/ProjectPage.css
+++ b/src/styles/ProjectPage.css
@@ -7,13 +7,6 @@
   text-align: justify;
 }
 
-.project-page-container hr {
-  margin: 0;
-  margin-top: 1%;
-  margin-bottom: 1%;
-  align-self: stretch;
-}
-
 .project-page-container ul {
   margin: 0;
 }
@@ -31,6 +24,15 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  opacity: 0;
+  animation: reveal 1.5s ease forwards;
+  animation-delay: 0.1s;
+}
+
+@keyframes reveal {
+  to {
+    opacity: 1;
+  }
 }
 
 .project-page-video {
