--- a/src/styles/ExperiencePreview.css
+++ b/src/styles/ExperiencePreview.css
@@ -1,20 +1,23 @@
 .experience-preview-container {
-  width: 50vw;
-  margin-left: 25vw;
-  margin-right: 25vw;
-}
-
-@media (max-width: 1200px) {
-  .experience-preview-container {
-    width: 90vw;
-    margin-left: 5vw;
-    margin-right: 5vw;
-  }
+  width: 90vw;
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
 
 .experience-preview-grid {
   display: flex;
   flex-direction: column;
-  width: 100%;
   gap: 2.5vh;
+}
+
+@media (min-width: 1200px) {
+  .experience-preview-grid {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .experience-preview-grid-item {
+    width: calc(50% - 1.25vh);
+  }
 }
