--- a/src/styles/ExperiencePage.css
+++ b/src/styles/ExperiencePage.css
@@ -1,7 +1,7 @@
 .experience-page-container {
   background-color: #212121;
   color: #f5f5f5;
-  width: 100vw;
+  width: calc(100vw - (100vw - 100%));
   height: 100vh;
   overflow: auto;
 }
