--- a/src/styles/ProjectPage.css
+++ b/src/styles/ProjectPage.css
@@ -1,7 +1,8 @@
 .project-page-container {
   background-color: #212121;
   color: #f5f5f5;
-  width: 100vw;
+  width: calc(100vw - (100vw - 100%));
+
   height: 100vh;
   overflow: auto;
   text-align: justify;
