--- a/src/styles/TitleCarousel.css
+++ b/src/styles/TitleCarousel.css
@@ -1,7 +1,8 @@
 .title-carousel-container {
   font-family: Roboto, sans serif;
   font-size: 20vh;
-  width: 100vw;
+  width: calc(100vw - (100vw - 100%));
+
   height: fit-content;
   padding-bottom: 5vh;
   padding-top: 5vh;
